# meeting-minder

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
python/: requirements.txt
python/analyzer/: core.py  main.py
python/transcriber/: main.py  transcribe_core.py
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analyzer.rs  main.rs  models.rs  recorder.rs  state.rs  storage.rs  transcriber.rs
src/components/: RecordingPromptPanel.tsx  SessionsList.tsx  SpeakerBars.tsx
src/hooks/: useSessions.ts
src/lib/: format.ts  statementStarters.ts  tauriApi.ts
tests/: format.test.ts  sessionsList.test.tsx  statementStarters.test.ts
tests/python/: test_analyze_integration.py  test_core.py  test_transcriber_core.py
